--- a/README.rdoc
+++ b/README.rdoc
@@ -1,12 +1,15 @@
-testings specs for recipes:
-name: string
-summary: text
-description: text
+Chefs:
 
--name must be present
--name must be between 5 characters and less than 100 characters
--summary must be present
--summary must be between 10 characters and less than 150 characters
--description must be present
--description must be between 20 and 500 characters
--chef_id must be present
+What we ahve already:
+- Chef model and validations
+- Chefs table with columns chefname and email
+
+What we need to do: 
+- Add passwords to the chef's table so chefs can be authenticated and logged index
+- Use email as log in credentials, since email is unique
+- Ability to register new chefs to use the app
+- Ability to display chefs profile
+- Ability to list chefs using the app
+- Ability for chefs to log in and log out of the app
+- Restrict actions like create recipe, edit recipe, and like feature to logged in chefs only
+- Restricting edit of recipes by chefs who created recipes
